# website

./: .gitignore  Cargo.toml  README.md
src/: host.rs  jail.rs  main.rs
static/: contact.js  index.css  index.js  terminal.css  test.css  unbtbl.css
templates/: about.html  art.html  blog.html  contact.html  index.html  smart.html
