[package]
name = "website"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
askama = "0.15.4"
axum = "0.8.8"
tokio = { version = "1.0", features = ["full"] }
tower = "0.5"
http = "1.4"
pin-project = "1"
bytes = "1"
rand = "0.10"
tower-http = { version = "0.6", features = ["fs", "set-header"] }
