[package]
name = "website"
version = "0.1.0"
edition = "2024"
license = "GPL-2.0-only"
publish = false

[dependencies]
askama = "0.15.4"
axum = "0.8.8"
tokio = { version = "1.0", features = ["full"] }
tower = "0.5"
http = "1.4"
pin-project = "1"
rand = "0.10"
anyhow = "1.0"
axum-anyhow = "0.10"
serde = "1"
serde_json = "1"
tower-http = { version = "0.6", features = ["fs", "set-header"] }
tracing = "0.1"
tracing-subscriber = "0.3.0"
dotenvy = "0.15"
ferromark = "0.1"
